# confix

./: .env.example  .gitignore  Cargo.toml  config.example.json  config.example.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  runner.rs
