[package]
name = "confix"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to manage application secrets and configurations."
authors = ["Jacques Murray <jacquesmmurray@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"
